src/core-crm/objects/Leave_of_Absence__c/Leave_of_Absence__c.object-meta.xml
<CustomObject>
    <label>Leave of Absence</label>
    <nameField>
        <displayFormat>LOA-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leave of Absences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>