src/core-crm/objects/Leave_of_Absence__c/fields/Approved_Flag__c.field-meta.xml
<CustomField>
    <fullName>Approved_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the absence was approved</description>
    <label>Approved Flag</label>
    <type>Checkbox</type>
</CustomField>