src/core-crm/objects/Leave_of_Absence__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End date of the absence</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>