src/core-crm/objects/Leave_of_Absence__c/fields/hed_Program_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>hed_Program_Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Enrolled course the absence applies to</description>
    <label>Program Enrollment</label>
    <referenceTo>hed__Program_Enrollment__c</referenceTo>
    <relationshipLabel>Leave of Absences</relationshipLabel>
    <relationshipName>Leave_of_Absences</relationshipName>
    <type>Lookup</type>
</CustomField>