src/core-crm/objects/Leave_of_Absence__c/fields/Is_On_Leave__c.field-meta.xml
<CustomField>
    <fullName>Is_On_Leave__c</fullName>
    <description>Indication of whether the leave of absence is active</description>
    <formula>AND(Start_Date__c  &lt;=  TODAY() ,  End_Date__c   &gt;=  TODAY() )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is On Leave</label>
    <type>Checkbox</type>
</CustomField>