src/core-crm/objects/Leave_of_Absence__c/fields/Leave_No__c.field-meta.xml
<CustomField>
    <fullName>Leave_No__c</fullName>
    <description>The sequence number of the leave of absence</description>
    <label>Leave No</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>