src/core-crm/objects/Leave_of_Absence__c/fields/Migration_Key__c.field-meta.xml
<CustomField>
    <fullName>Migration_Key__c</fullName>
    <description>Used for migrated data external key</description>
    <label>Migration Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>