src/core-crm/objects/Leave_of_Absence__c/fields/Return_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Return_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the return from absence is confirmed</description>
    <label>Return Confirmed</label>
    <type>Checkbox</type>
</CustomField>