src/core-crm/objects/Leave_of_Absence__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Starting date of the absence</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>