src/core-crm/objects/Leave_of_Absence__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Student full name</description>
    <label>Student</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leave of Absences</relationshipLabel>
    <relationshipName>Leave_of_Absences</relationshipName>
    <type>Lookup</type>
</CustomField>