src/core-crm/objects/Leave_of_Absence__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Student__c</columns>
    <columns>hed_Program_Enrollment__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Is_On_Leave__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <group>Development_Team</group>
        <group>Future_Students_Domestic</group>
        <group>Future_Students_International</group>
        <group>Student_Success_Outreach_Manager</group>
        <group>Student_Success_Outreach_Staff</group>
        <group>System_Administrator</group>
        <group>System_Administrator_Modify_All_Data</group>
        <group>System_Administrator_Read_Only</group>
    </sharedTo>
</ListView>